--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ psycopg2-binary==2.9.9
 # === DATA VALIDATION ===
 pydantic==2.8.0
 pydantic-settings==2.4.0
+email-validator==2.1.0
 
 # === HTTP CLIENT ===
 httpx==0.27.0
