--- a/backend/env.example
+++ b/backend/env.example
@@ -1,30 +1,46 @@
-# === APPLICATION ===
-APP_NAME="Charro Bot API"
-VERSION="1.0.0"
-ENVIRONMENT="development"
+# =================================
+# CHARRO BOT - CONFIGURACIÓN EJEMPLO
+# =================================
+# 📋 Copia este archivo a .env y configura tus valores
+# 💡 cp env.example .env
+
+# 🔐 CREDENCIALES DE LOGIN
+# Usuarios para acceder al dashboard
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=cambiar_por_password_seguro
+
+SUPERVISOR_USERNAME=supervisor
+SUPERVISOR_PASSWORD=cambiar_por_password_seguro
+
+INDIEHOY_USERNAME=indiehoy
+INDIEHOY_PASSWORD=cambiar_por_password_seguro
+
+# 🔑 CONFIGURACIÓN DE SESIONES
+SESSION_SECRET_KEY=generar_clave_secreta_muy_segura_aqui
+SESSION_EXPIRE_HOURS=24
+
+# 🗄️ BASE DE DATOS
+DATABASE_URL=sqlite:///./data/charro_bot.db
+
+# 🤖 OLLAMA (si se usa en el futuro)
+OLLAMA_URL=http://localhost:11434
+OLLAMA_MODEL=llama3
+
+# 🌍 ENTORNO
+ENVIRONMENT=development
 DEBUG=true
 
-# === API ===
-API_V1_STR="/api/v1"
+# 📧 EMAIL (para futuras notificaciones)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=tu_email@gmail.com
+SMTP_PASSWORD=tu_app_password
 
-# === CORS (Frontend URLs) ===
-ALLOWED_ORIGINS="http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000"
+# 🔗 URLs
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:8000
 
-# === OLLAMA LLM ===
-OLLAMA_URL="http://localhost:11434"
-OLLAMA_MODEL="llama3"
-OLLAMA_TIMEOUT=30
-
-# === DATABASE ===
-# SQLite (default)
-DATABASE_URL="sqlite:///./charro_bot.db"
-# PostgreSQL (production)
-# DATABASE_URL="postgresql://user:password@localhost/charro_bot_db"
-
-# === SECURITY ===
-SECRET_KEY="your-super-secret-key-change-in-production"
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# === RAG/VECTOR STORE ===
-CHROMA_PERSIST_DIR="./chroma_db"
-EMBEDDING_MODEL="all-MiniLM-L6-v2" 
+# 📊 CONFIGURACIÓN ADICIONAL
+LOG_LEVEL=INFO
+MAX_REQUESTS_PER_MINUTE=60
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000 
