--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,8 +16,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copiar código de la aplicación
 COPY . .
 
+# Crear directorio de datos (la DB se poblará al iniciar la app)
+RUN mkdir -p /app/data
+
+# Hacer el script de entrada ejecutable
+RUN chmod +x start.sh
+
 # Exponer puerto para FastAPI
 EXPOSE 8000
 
-# Comando para ejecutar la aplicación
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+# Usar script de entrada que maneja PORT correctamente
+CMD ["./start.sh"] 
